# ai-manager

./: .env.example  .gitignore  HELLO.md  Makefile  README.md  com.gastown.transcript-sync.plist  docker-compose.yml  sync-transcripts.sh
app/: Dockerfile  pyproject.toml
app/datasette/: metadata.yml
app/src/ai_manager/: cxdb_client.py  cxdb_loader.py  entrypoint.py  git_sync.py  jira_client.py  loader.py  models.py  parser.py  s3_client.py  scanner.py  schema.py  summarizer.py  transcript_parser.py  transcript_proxy.py
app/tests/: conftest.py  test_cxdb_client.py  test_cxdb_loader.py  test_git_sync.py  test_jira_client.py  test_loader.py  test_parser.py  test_s3_client.py  test_scanner.py  test_schema.py  test_summarizer.py  test_transcript_parser.py  test_transcript_proxy.py
app/tests/fixtures/: sample_decision.md  sample_jira_api_response.json  sample_question.md
app/tests/fixtures/workspace/beads/aim-abc1/: README.md  bead.json
app/tests/fixtures/workspace/beads/aim-abc1/decisions/: 001-use-sqlite.md
app/tests/fixtures/workspace/beads/aim-abc1/open-questions/: 001-caching.md
app/tests/fixtures/workspace/beads/aim-abc1/requirements/: functional.md
app/tests/fixtures/workspace/jira/EN-1234/: README.md
app/tests/fixtures/workspace/jira/EN-1234/requirements/: acceptance-criteria.md
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  main.tsx
dashboard/src/__tests__/: DataTable.test.tsx  DecisionDetailPage.test.tsx  DecisionsPage.test.tsx  DocumentPage.test.tsx  Landing.test.tsx  (+7 more)
tests/: smoke.sh
(+26 files in other folders)
