[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-manager"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "datasette>=0.65",
    "python-frontmatter>=1.1",
    "pyyaml>=6.0",
    "requests>=2.31",
    "boto3>=1.34",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
    "moto[s3]>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
